# Good-Projects

Beginners/: hang.py  words.txt
Beginners/Mads/: main.py  note.md  pyproject.toml  rand.txt
Beginners/patterns/: basic_oops.py  oops_principles.py
Intermidiate/Image_Filter/: main.py  pyproject.toml
Intermidiate/Mutant_Labs/mutants/: .tasks  pyproject.toml
Intermidiate/Mutant_Labs/mutants/docs/: conf.py  index.rst
Intermidiate/Mutant_Labs/mutants/src/: Notes.md
Intermidiate/Mutant_Labs/mutants/src/app/String_engine/: storage.py  validators.py
Intermidiate/Mutant_Labs/mutants/src/mutants/: __init__.py
Intermidiate/Mutant_Labs/mutants/src/utils/: __init__.py  actions.py  timer.py
Intermidiate/Mutant_Labs/mutants/tests/: test_validators.py
Intermidiate/Tetris_clone/: README.md  main.py  pyproject.toml
Intermidiate/extractor/: pyproject.toml
Intermidiate/extractor/notebooks/: download_pdf.ipynb
Intermidiate/extractor/src/extractor/: __init__.py
