[project]
name = "extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bimal Mallick", email = "ghostridergothan8460@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
extractor = "extractor:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
