[project]
name = "mutants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bimal Mallick", email = "ghostridergothan8460@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pydantic>=2.12.0",
]

[project.scripts]
mutants = "mutants:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "sphinx>=8.2.3",
]
